--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/aikijuanma/juanma.xyz#readme",
   "devDependencies": {
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.1.0",
     "gulp-less": "^4.0.0",
     "gulp-rename": "^1.3.0",
     "gulp-uglify": "^3.0.0",
-    "jshint": "^2.9.6"
+    "jshint": "^2.13.1"
   },
   "dependencies": {
     "gulp-minify-html": "^1.0.6"
